--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3077,7 +3077,7 @@ kbd {
   align-items: center;
   height: 100%;
   /* margin-top: 8%; */
-      margin: 17% auto;
+      margin: 20% auto;
   /* max-width: 650px; */
   z-index: 1;
   width: 100%;
@@ -3099,7 +3099,8 @@ kbd {
     max-width: 94%;
     font-size: 18px;
     line-height: 27px;
-    margin: 12px auto;
+    /* margin: 12px auto; */
+    margin-top: 30px;
 }
 .hero-contact-info {
   position: absolute;
@@ -4715,12 +4716,15 @@ margin: 70% auto;
 }
 h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
     font-size: 20px;
+    text-align: center;
 }
 .slider-btn-two {
     margin: 20px;
 }
 .hero-btn a {
     font-size: 15px;
+}.hero-btn {
+    text-align: center !important;
 }
 
 }
@@ -4744,6 +4748,7 @@ margin: 70% auto;
 }
 h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
     font-size: 22px;
+    text-align: center;
 }
 .slider-btn-two {
     margin: 20px;
@@ -4756,6 +4761,9 @@ h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
  {
     margin: 80px auto;
 }
+.hero-btn {
+    text-align: center !important;
+}
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -4767,6 +4775,7 @@ h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
         margin: 22% auto;
         z-index: 1;
     }
+
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -4774,7 +4783,7 @@ h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
   .hero-btn {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     gap: 20px;
 }
 .ak-hero.ak-style1 .hero-slider-info {
@@ -4793,7 +4802,7 @@ h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
     max-width: 94%;
     font-size: 25px;
     line-height: 35px;
-    margin: 12px auto;
+    /* margin: 12px auto; */
 }
 h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
     font-size: 42px;
@@ -4832,7 +4841,7 @@ h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
 }
 
 h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
-      font-size: 60px;
+      font-size: 56px;
  text-align: left;
 }
   .hero-btn {
@@ -4853,6 +4862,7 @@ h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
         z-index: 1;
         width: 100%;
     }
+    
  }
 
 /* Extra large devices (large desktops, 1200px and up) */
@@ -4860,8 +4870,14 @@ h1.hero-main-title,.ak-hero.ak-style1 .hero-slider-info .hero-main-title-1{
   .hero-btn {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     gap: 20px;
+}
+ .hero-slider-info {
+    text-align: center;
+}
+.hero-title {
+    text-align: left;
 }
  }
 .opation {
