--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4981,22 +4981,25 @@ h4.title.process {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #ffffff21;
+    padding: 25px;
+    margin: 12px;
 }
-
+/* 
 .trusted-client img {
   transform: scale(1.1) rotate(2deg);
   transition: all 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
   opacity: 1;
   will-change: transform, opacity;
   border-radius: 8px;
-}
+} */
 
-.trusted-client img:hover {
+/* .trusted-client img:hover {
   transform: scale(0.9) rotate(0deg);
   opacity: 0.8;
   filter: brightness(1.1) contrast(1.2);
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
-}
+} */
 
    .section-title {
         font-weight: 700;
